--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Yvonne Ugirimpuhwe</h1>
-      <p>I'm <span class="typed" data-typed-items="UI/UX Designer,Back-end Developer, Freelancer,Full Stack Web Developer "></span></p>
+      <p>I'm a <span class="typed" data-typed-items="UI/UX Designer,Back-end Developer, Freelancer,Full Stack Web Developer "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -83,41 +83,30 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hello,I'm Yvonne.I am a Full Stack Web Developer focused in UI/UX Design and Back-end development.I create clean,professional and functional Websites.</p>
         </div>
-
+       <br>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/yvn.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Design process</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              My Design process always starts with a pencil and paper, scribbling ideas and concepts, thinking about the problem and the solution.<br>
+              Once I have an idea of what I want to achieve, I’ll then sit down at my computer and start with wire frames and low level mockups. Then add the imagery, typography design and details.<br>
+              One of the things I love about my Job, is the great tools I get to work with every day, here are some of the tools I use in my work.<br>
+              I use Photoshop and Sketch for my layout and design.
             </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
-                </ul>
-              </div>
-            </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+           
+              <h3>Development process</h3>
+              <p class="font-italic">
+                For development, I write HTML5 and CSS3,I use JavaScript for interactivity and PHP for making the web page dynamic when needed.<br>
+                Sometimes i use Bootstrap for CSS extention,jQuery library for JavaScript extension and twig templates for PHP.<br>
+                I also use Python in its framework Django to interact with the Back-end part of the website when needed.I use PostgreSQL to create database to store users data.
+                For those interested, the text editor I use is Visual Studio to build sites localy.
+              </p>
+           
           </div>
         </div>
 
