--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <!-- <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <!-- <li><a href="#services"><i class="bx bx-server"></i> Services</a></li> -->
+          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
@@ -83,7 +83,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello,I'm Yvonne.I am a Full Stack Web Developer focused in UI/UX Design and Back-end development.I create clean,professional and functional Websites.</p>
+          <p>Hello,I'm Yvonne.I am a Full Stack Web Developer focused in UI/UX Design and Back-end development.<br>
+            I create clean,professional and functional Websites.</p>
         </div>
        <br>
         <div class="row">
@@ -130,7 +131,9 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>The strong journey of building a successful career is always hard.But up to now i have some facts that help me to stand always confident
+            and push me to keep working so hard for the best of a bright career success. 
+          </p>
         </div>
 
         <div class="row no-gutters">
@@ -138,16 +141,16 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">232</span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <span data-toggle="counter-up">35</span>
+              <p><strong>Happy Clients</strong> Based on their feedback,they have appreciated what i developed for them.</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">521</span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span data-toggle="counter-up">72</span>
+              <p><strong>Projects</strong> <br>You can find some of projects on my GitHub account,other are related to clients'privacy.</p>
             </div>
           </div>
 
@@ -155,15 +158,15 @@
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1,463</span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <p><strong>Hours Of Support</strong> <br>I just estimated to share with you how proudly i am to the work already done. </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <span data-toggle="counter-up">6</span>
+              <p><strong>Hard Workers</strong> Team work & Hardworking always lead to great results.</p>
             </div>
           </div>
 
@@ -178,7 +181,10 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Nowadays,the world of technology run too quickly.
+            As i joined the career of Software development years ago,my package is full of different programming languages which help me to meet needs of different clients.
+            As i keep growing and learning new skills,below you can find some of the skills i'm truely confident in.
+          </p>
         </div>
 
         <div class="row skills-content">
@@ -205,6 +211,18 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            <div class="progress">
+                <span class="skill"> jQuery <i class="val">65%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="progress">
+                  <span class="skill"> AngularJs <i class="val">75%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
 
           </div>
 
@@ -230,12 +248,19 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+         
             <div class="progress">
-              <span class="skill"> PostgreSQL <i class="val">80%</i></span>
+              <span class="skill"> SQL(PostgreSQL) <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            <div class="progress">
+                <span class="skill"> Git <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
 
           </div>
 
@@ -245,7 +270,7 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
+    <!-- <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
@@ -308,7 +333,8 @@
         </div>
 
       </div>
-    </section><!-- End Resume Section -->
+    </section> -->
+    <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
@@ -428,7 +454,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <!-- <section id="services" class="services">
+    <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -470,11 +496,11 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -542,7 +568,8 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -550,7 +577,8 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I'm Currently available for work. If you have a project you'd like to discuss, then please email me or call me via the cantact below.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-in">
