--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here you can find some of my projects,just click on buttom-right icon on the image to see more details and live link to the website.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
