--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -72,10 +72,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Project Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Project Details</li>
           </ol>
         </div>
 
@@ -89,29 +89,32 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio-details-1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio-details-2.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio-details-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/photobooth.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/photobooth1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/photobooth2.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Website</li>
+              <!-- <li><strong>Client</strong>: ASU Company</li> -->
+              <li><strong>Project date</strong>: 12 October, 2019</li>
+              <li><strong>Project URL</strong>: <a href="#">https://photobooth-1.herokuapp.com/</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>This is an example of portfolio detail</h2>
+          <h2>Project description</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            Photobooth is gallery website where you can uplaod different type of photos and the user or the person who will visit your website will be able to see all shared photos,and when he/she click on a photo in the gallery will be able to see details related to that photo.
+            I am still working on for business purpose.
           </p>
         </div>
+
+
 
       </div>
     </section><!-- End Portfolio Details Section -->
