--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -110,7 +110,7 @@
           <h2>Project description</h2>
           <p>
             Photobooth is gallery website where you can uplaod different type of photos and the user or the person who will visit your website will be able to see all shared photos,and when he/she click on a photo in the gallery will be able to see details related to that photo.
-            I am still working on for business purpose.
+            I am still working on it for business purpose.
           </p>
         </div>
 
