--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -72,10 +72,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Project Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Project Details</li>
           </ol>
         </div>
 
@@ -109,9 +109,12 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>This is an example of portfolio detail</h2>
+          <h2>Project description</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              Online-Selfcare is a website that i created based on the idea of teaching young adolescence girls about their reprodutive health,the website will help them to learn how to count the days of their menstruation cycle,and will able to fight themself against unwanted pregnancy based on the information they get from this application.
+              That shared link was on the first phase of development,up to now the idea of this web application has find a local sponsor and now the application is in on the final final phase of trial.
+              With partnership of other developers the app now has its Mobile app version.
+
           </p>
         </div>
 
