--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/gigi.jpg" rel="icon">
+  <link href="assets/img/gigi.jpg" rel="">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -46,7 +46,7 @@
           <a href="https://twitter.com/Yvonnah_Milk" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://www.skype.com/in/Yvonne giramata/" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/yvonne-u-bb880898/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -56,6 +56,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <!-- <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
+          <!-- <li><a href="#skills"><i class="bx bx-book-content"></i> Skills</a></li> -->
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
@@ -71,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Yvonne Ugirimpuhwe</h1>
-      <p>I'm a <span class="typed" data-typed-items="UI/UX Designer,Back-end Developer, Freelancer,Full Stack Web Developer "></span></p>
+      <p>I'm a <span class="typed" data-typed-items=" UI/UX Designer, Back-end Developer, Freelancer, Full Stack Web Developer "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -372,7 +373,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/selfcare.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/selfcare.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/selfcare.jpg" data-gall="portfolioGallery" class="venobox" title="Web 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details1.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -382,7 +383,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/gsearch.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/gsearch.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/gsearch.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -392,7 +393,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/news.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/news.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/news.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -402,7 +403,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/quotes.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/quotes.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/quotes.jpg" data-gall="portfolioGallery" class="venobox" title="Web 4"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details4.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -412,7 +413,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/instagram.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/instagram.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/instagram.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details5.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -588,7 +589,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Gasabo, Gisozi, KN 681 st</p>
+                <p>Kigali, Gasabo, Gisozi, KN 681 st</p>
               </div>
 
               <div class="email">
@@ -602,7 +603,7 @@
                 <h4>Call:</h4>
                 <p>+250 783 230 882</p>
               </div>
-            
+            <img src="assets/img/googlemap.png"></img>
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
